parser.output
Terminals unused in grammar

    RETURN
    IF
    ELSE
    WHILE
    DO
    FOR
    SWITCH
    CASE
    DEFAULT
    BREAK
    TRUE
    FALSE
    INT
    CHAR
    BOOL
    STRING
    DOUBLE
    OUTPRINT
    COLON
    DOT


State 8 conflicts: 2 shift/reduce, 2 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: ε
    2        | program class

    3 class: PUBLIC CLASS CLASS_NAME LCURLY declarations method_declaration RCURLY

    4 declarations: ε
    5             | declarations object_creation
    6             | declarations variable_declaration

    7 variable_declaration: modifier DATATYPE IDENT SEMICOLON

    8 object_creation: modifier CLASS_NAME IDENT EQUALS NEW CLASS_NAME LPAR RPAR SEMICOLON

    9 modifier: ε
   10         | PUBLIC
   11         | PRIVATE

   12 return_type: VOID
   13            | CLASS_NAME

   14 secondary_modifier: ε
   15                   | secondary_modifier STATIC
   16                   | secondary_modifier ABSTRACT
   17                   | secondary_modifier FINAL
   18                   | secondary_modifier NATIVE
   19                   | secondary_modifier SYNCHRONIZED

   20 method_declaration: ε
   21                   | method_declaration modifier secondary_modifier return_type IDENT LPAR parameter_list RPAR LCURLY declarations RCURLY
   22                   | method_declaration modifier secondary_modifier DATATYPE IDENT LPAR parameter_list RPAR LCURLY declarations RCURLY

   23 parameter_list: ε
   24               | DATATYPE IDENT
   25               | parameter_list COMMA DATATYPE IDENT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    DATATYPE (258) 7 22 24 25
    NEW (259) 8
    RETURN (260)
    VOID (261) 12
    IF (262)
    ELSE (263)
    WHILE (264)
    DO (265)
    FOR (266)
    SWITCH (267)
    CASE (268)
    DEFAULT (269)
    BREAK (270)
    TRUE (271)
    FALSE (272)
    INT (273)
    CHAR (274)
    BOOL (275)
    STRING (276)
    DOUBLE (277)
    PRIVATE (278) 11
    PUBLIC (279) 3 10
    STATIC (280) 15
    ABSTRACT (281) 16
    FINAL (282) 17
    NATIVE (283) 18
    SYNCHRONIZED (284) 19
    OUTPRINT (285)
    IDENT (286) 7 8 21 22 24 25
    LCURLY (287) 3 21 22
    RCURLY (288) 3 21 22
    CLASS (289) 3
    CLASS_NAME (290) 3 8 13
    LPAR (291) 8 21 22
    RPAR (292) 8 21 22
    COLON (293)
    DOT (294)
    COMMA (295) 25
    SEMICOLON (296) 7 8
    EQUALS (297) 8


Nonterminals, with rules where they appear

    $accept (43)
        on left: 0
    program (44)
        on left: 1 2
        on right: 0 2
    class (45)
        on left: 3
        on right: 2
    declarations (46)
        on left: 4 5 6
        on right: 3 5 6 21 22
    variable_declaration (47)
        on left: 7
        on right: 6
    object_creation (48)
        on left: 8
        on right: 5
    modifier (49)
        on left: 9 10 11
        on right: 7 8 21 22
    return_type (50)
        on left: 12 13
        on right: 21
    secondary_modifier (51)
        on left: 14 15 16 17 18 19
        on right: 15 16 17 18 19 21 22
    method_declaration (52)
        on left: 20 21 22
        on right: 3 21 22
    parameter_list (53)
        on left: 23 24 25
        on right: 21 22 25


State 0

    0 $accept: • program $end

    $default  reduce using rule 1 (program)

    program  go to state 1


State 1

    0 $accept: program • $end
    2 program: program • class

    $end    shift, and go to state 2
    PUBLIC  shift, and go to state 3

    class  go to state 4


State 2

    0 $accept: program $end •

    $default  accept


State 3

    3 class: PUBLIC • CLASS CLASS_NAME LCURLY declarations method_declaration RCURLY

    CLASS  shift, and go to state 5


State 4

    2 program: program class •

    $default  reduce using rule 2 (program)


State 5

    3 class: PUBLIC CLASS • CLASS_NAME LCURLY declarations method_declaration RCURLY

    CLASS_NAME  shift, and go to state 6


State 6

    3 class: PUBLIC CLASS CLASS_NAME • LCURLY declarations method_declaration RCURLY

    LCURLY  shift, and go to state 7


State 7

    3 class: PUBLIC CLASS CLASS_NAME LCURLY • declarations method_declaration RCURLY

    $default  reduce using rule 4 (declarations)

    declarations  go to state 8


State 8

    3 class: PUBLIC CLASS CLASS_NAME LCURLY declarations • method_declaration RCURLY
    5 declarations: declarations • object_creation
    6             | declarations • variable_declaration

    PRIVATE  shift, and go to state 9
    PUBLIC   shift, and go to state 10

    DATATYPE    reduce using rule 9 (modifier)
    DATATYPE    [reduce using rule 20 (method_declaration)]
    PRIVATE     [reduce using rule 20 (method_declaration)]
    PUBLIC      [reduce using rule 20 (method_declaration)]
    CLASS_NAME  reduce using rule 9 (modifier)
    CLASS_NAME  [reduce using rule 20 (method_declaration)]
    $default    reduce using rule 20 (method_declaration)

    variable_declaration  go to state 11
    object_creation       go to state 12
    modifier              go to state 13
    method_declaration    go to state 14


State 9

   11 modifier: PRIVATE •

    $default  reduce using rule 11 (modifier)


State 10

   10 modifier: PUBLIC •

    $default  reduce using rule 10 (modifier)


State 11

    6 declarations: declarations variable_declaration •

    $default  reduce using rule 6 (declarations)


State 12

    5 declarations: declarations object_creation •

    $default  reduce using rule 5 (declarations)


State 13

    7 variable_declaration: modifier • DATATYPE IDENT SEMICOLON
    8 object_creation: modifier • CLASS_NAME IDENT EQUALS NEW CLASS_NAME LPAR RPAR SEMICOLON

    DATATYPE    shift, and go to state 15
    CLASS_NAME  shift, and go to state 16


State 14

    3 class: PUBLIC CLASS CLASS_NAME LCURLY declarations method_declaration • RCURLY
   21 method_declaration: method_declaration • modifier secondary_modifier return_type IDENT LPAR parameter_list RPAR LCURLY declarations RCURLY
   22                   | method_declaration • modifier secondary_modifier DATATYPE IDENT LPAR parameter_list RPAR LCURLY declarations RCURLY

    PRIVATE  shift, and go to state 9
    PUBLIC   shift, and go to state 10
    RCURLY   shift, and go to state 17

    $default  reduce using rule 9 (modifier)

    modifier  go to state 18


State 15

    7 variable_declaration: modifier DATATYPE • IDENT SEMICOLON

    IDENT  shift, and go to state 19


State 16

    8 object_creation: modifier CLASS_NAME • IDENT EQUALS NEW CLASS_NAME LPAR RPAR SEMICOLON

    IDENT  shift, and go to state 20


State 17

    3 class: PUBLIC CLASS CLASS_NAME LCURLY declarations method_declaration RCURLY •

    $default  reduce using rule 3 (class)


State 18

   21 method_declaration: method_declaration modifier • secondary_modifier return_type IDENT LPAR parameter_list RPAR LCURLY declarations RCURLY
   22                   | method_declaration modifier • secondary_modifier DATATYPE IDENT LPAR parameter_list RPAR LCURLY declarations RCURLY

    $default  reduce using rule 14 (secondary_modifier)

    secondary_modifier  go to state 21


State 19

    7 variable_declaration: modifier DATATYPE IDENT • SEMICOLON

    SEMICOLON  shift, and go to state 22


State 20

    8 object_creation: modifier CLASS_NAME IDENT • EQUALS NEW CLASS_NAME LPAR RPAR SEMICOLON

    EQUALS  shift, and go to state 23


State 21

   15 secondary_modifier: secondary_modifier • STATIC
   16                   | secondary_modifier • ABSTRACT
   17                   | secondary_modifier • FINAL
   18                   | secondary_modifier • NATIVE
   19                   | secondary_modifier • SYNCHRONIZED
   21 method_declaration: method_declaration modifier secondary_modifier • return_type IDENT LPAR parameter_list RPAR LCURLY declarations RCURLY
   22                   | method_declaration modifier secondary_modifier • DATATYPE IDENT LPAR parameter_list RPAR LCURLY declarations RCURLY

    DATATYPE      shift, and go to state 24
    VOID          shift, and go to state 25
    STATIC        shift, and go to state 26
    ABSTRACT      shift, and go to state 27
    FINAL         shift, and go to state 28
    NATIVE        shift, and go to state 29
    SYNCHRONIZED  shift, and go to state 30
    CLASS_NAME    shift, and go to state 31

    return_type  go to state 32


State 22

    7 variable_declaration: modifier DATATYPE IDENT SEMICOLON •

    $default  reduce using rule 7 (variable_declaration)


State 23

    8 object_creation: modifier CLASS_NAME IDENT EQUALS • NEW CLASS_NAME LPAR RPAR SEMICOLON

    NEW  shift, and go to state 33


State 24

   22 method_declaration: method_declaration modifier secondary_modifier DATATYPE • IDENT LPAR parameter_list RPAR LCURLY declarations RCURLY

    IDENT  shift, and go to state 34


State 25

   12 return_type: VOID •

    $default  reduce using rule 12 (return_type)


State 26

   15 secondary_modifier: secondary_modifier STATIC •

    $default  reduce using rule 15 (secondary_modifier)


State 27

   16 secondary_modifier: secondary_modifier ABSTRACT •

    $default  reduce using rule 16 (secondary_modifier)


State 28

   17 secondary_modifier: secondary_modifier FINAL •

    $default  reduce using rule 17 (secondary_modifier)


State 29

   18 secondary_modifier: secondary_modifier NATIVE •

    $default  reduce using rule 18 (secondary_modifier)


State 30

   19 secondary_modifier: secondary_modifier SYNCHRONIZED •

    $default  reduce using rule 19 (secondary_modifier)


State 31

   13 return_type: CLASS_NAME •

    $default  reduce using rule 13 (return_type)


State 32

   21 method_declaration: method_declaration modifier secondary_modifier return_type • IDENT LPAR parameter_list RPAR LCURLY declarations RCURLY

    IDENT  shift, and go to state 35


State 33

    8 object_creation: modifier CLASS_NAME IDENT EQUALS NEW • CLASS_NAME LPAR RPAR SEMICOLON

    CLASS_NAME  shift, and go to state 36


State 34

   22 method_declaration: method_declaration modifier secondary_modifier DATATYPE IDENT • LPAR parameter_list RPAR LCURLY declarations RCURLY

    LPAR  shift, and go to state 37


State 35

   21 method_declaration: method_declaration modifier secondary_modifier return_type IDENT • LPAR parameter_list RPAR LCURLY declarations RCURLY

    LPAR  shift, and go to state 38


State 36

    8 object_creation: modifier CLASS_NAME IDENT EQUALS NEW CLASS_NAME • LPAR RPAR SEMICOLON

    LPAR  shift, and go to state 39


State 37

   22 method_declaration: method_declaration modifier secondary_modifier DATATYPE IDENT LPAR • parameter_list RPAR LCURLY declarations RCURLY

    DATATYPE  shift, and go to state 40

    $default  reduce using rule 23 (parameter_list)

    parameter_list  go to state 41


State 38

   21 method_declaration: method_declaration modifier secondary_modifier return_type IDENT LPAR • parameter_list RPAR LCURLY declarations RCURLY

    DATATYPE  shift, and go to state 40

    $default  reduce using rule 23 (parameter_list)

    parameter_list  go to state 42


State 39

    8 object_creation: modifier CLASS_NAME IDENT EQUALS NEW CLASS_NAME LPAR • RPAR SEMICOLON

    RPAR  shift, and go to state 43


State 40

   24 parameter_list: DATATYPE • IDENT

    IDENT  shift, and go to state 44


State 41

   22 method_declaration: method_declaration modifier secondary_modifier DATATYPE IDENT LPAR parameter_list • RPAR LCURLY declarations RCURLY
   25 parameter_list: parameter_list • COMMA DATATYPE IDENT

    RPAR   shift, and go to state 45
    COMMA  shift, and go to state 46


State 42

   21 method_declaration: method_declaration modifier secondary_modifier return_type IDENT LPAR parameter_list • RPAR LCURLY declarations RCURLY
   25 parameter_list: parameter_list • COMMA DATATYPE IDENT

    RPAR   shift, and go to state 47
    COMMA  shift, and go to state 46


State 43

    8 object_creation: modifier CLASS_NAME IDENT EQUALS NEW CLASS_NAME LPAR RPAR • SEMICOLON

    SEMICOLON  shift, and go to state 48


State 44

   24 parameter_list: DATATYPE IDENT •

    $default  reduce using rule 24 (parameter_list)


State 45

   22 method_declaration: method_declaration modifier secondary_modifier DATATYPE IDENT LPAR parameter_list RPAR • LCURLY declarations RCURLY

    LCURLY  shift, and go to state 49


State 46

   25 parameter_list: parameter_list COMMA • DATATYPE IDENT

    DATATYPE  shift, and go to state 50


State 47

   21 method_declaration: method_declaration modifier secondary_modifier return_type IDENT LPAR parameter_list RPAR • LCURLY declarations RCURLY

    LCURLY  shift, and go to state 51


State 48

    8 object_creation: modifier CLASS_NAME IDENT EQUALS NEW CLASS_NAME LPAR RPAR SEMICOLON •

    $default  reduce using rule 8 (object_creation)


State 49

   22 method_declaration: method_declaration modifier secondary_modifier DATATYPE IDENT LPAR parameter_list RPAR LCURLY • declarations RCURLY

    $default  reduce using rule 4 (declarations)

    declarations  go to state 52


State 50

   25 parameter_list: parameter_list COMMA DATATYPE • IDENT

    IDENT  shift, and go to state 53


State 51

   21 method_declaration: method_declaration modifier secondary_modifier return_type IDENT LPAR parameter_list RPAR LCURLY • declarations RCURLY

    $default  reduce using rule 4 (declarations)

    declarations  go to state 54


State 52

    5 declarations: declarations • object_creation
    6             | declarations • variable_declaration
   22 method_declaration: method_declaration modifier secondary_modifier DATATYPE IDENT LPAR parameter_list RPAR LCURLY declarations • RCURLY

    PRIVATE  shift, and go to state 9
    PUBLIC   shift, and go to state 10
    RCURLY   shift, and go to state 55

    $default  reduce using rule 9 (modifier)

    variable_declaration  go to state 11
    object_creation       go to state 12
    modifier              go to state 13


State 53

   25 parameter_list: parameter_list COMMA DATATYPE IDENT •

    $default  reduce using rule 25 (parameter_list)


State 54

    5 declarations: declarations • object_creation
    6             | declarations • variable_declaration
   21 method_declaration: method_declaration modifier secondary_modifier return_type IDENT LPAR parameter_list RPAR LCURLY declarations • RCURLY

    PRIVATE  shift, and go to state 9
    PUBLIC   shift, and go to state 10
    RCURLY   shift, and go to state 56

    $default  reduce using rule 9 (modifier)

    variable_declaration  go to state 11
    object_creation       go to state 12
    modifier              go to state 13


State 55

   22 method_declaration: method_declaration modifier secondary_modifier DATATYPE IDENT LPAR parameter_list RPAR LCURLY declarations RCURLY •

    $default  reduce using rule 22 (method_declaration)


State 56

   21 method_declaration: method_declaration modifier secondary_modifier return_type IDENT LPAR parameter_list RPAR LCURLY declarations RCURLY •

    $default  reduce using rule 21 (method_declaration)
